<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, Calculator!</string>
    <string name="app_name">Calculator</string>
    <string name="button_text_7">7</string>
    <string name="button_text_8">8</string>
    <string name="button_text_9">9</string>
    <string name="button_text_div">/</string>
    
    <string name="button_text_4">4</string>
    <string name="button_text_5">5</string>
    <string name="button_text_6">6</string>
    <string name="button_text_mult">*</string>
    
    <string name="button_text_1">1</string>
    <string name="button_text_2">2</string>
    <string name="button_text_3">3</string>
    <string name="button_text_sub">-</string>
    
    <string name="button_text_0">0</string>
    <string name="button_text_poi">.</string>
    <string name="button_text_enter">=</string>
    <string name="button_text_plus">+</string>
</resources>
